Update join jame
